--- a/app/src/main/res/layout/activity_booking_list.xml
+++ b/app/src/main/res/layout/activity_booking_list.xml
@@ -11,13 +11,26 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginTop="32dp"
-        android:text="Agenda"
+        android:text="@string/agenda"
         android:textColor="@color/purple"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <Button
+        android:id="@+id/history_button"
+        style="@style/vertical_button_with_icon"
+        android:layout_width="90dp"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_marginTop="20dp"
+        android:layout_marginEnd="2dp"
+        android:drawableTop="@drawable/baseline_history_24"
+        android:text="@string/history"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <androidx.cardview.widget.CardView
-        android:id="@+id/confirmation_card"
+        android:id="@+id/booking_card_1"
         style="@style/default_card_view"
         android:layout_width="352dp"
         android:layout_height="136dp"
@@ -142,5 +155,7 @@
         </androidx.constraintlayout.widget.ConstraintLayout>
 
     </androidx.cardview.widget.CardView>
+
+    <include layout="@layout/bottom_menu" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
