--- a/app/src/main/res/menu/menu_item.xml
+++ b/app/src/main/res/menu/menu_item.xml
@@ -4,7 +4,7 @@
     <item
         android:id="@+id/home_button"
         android:icon="@drawable/baseline_home_24"
-        android:title="Início" />
+        android:title="@string/home" />
 
     <item
         android:id="@+id/search_button"
@@ -19,10 +19,10 @@
     <item
         android:id="@+id/calendar_button"
         android:icon="@drawable/baseline_calendar_month_24"
-        android:title="Agenda" />
+        android:title="@string/agenda" />
 
     <item
         android:id="@+id/profile_button"
         android:icon="@drawable/baseline_person_24"
-        android:title="Perfil" />
+        android:title="@string/profile" />
 </menu>
